# 96bit-block-cipher

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
analysis/: CMakeLists.txt  aes_sbox_ddt.csv  aes_sbox_lat.csv  ddt_lat.cpp  ddt_lat.py  diff_trail.cpp  diff_trails.py  linear_bias.cpp  linear_bias.py
bench/: bench_throughput.cpp
cmake/: cube96Config.cmake.in
docs/: analysis_guide.md  code_review.md  spec.md
include/cube96/: cipher.hpp  ct_utils.hpp  endian.hpp  impl_dispatch.hpp  key_schedule.hpp  perm.hpp  sbox.hpp  types.hpp
src/: cipher.cpp  endian.cpp  impl_fast.cpp  impl_hardened.cpp  key_schedule.cpp  perm.cpp  sbox.cpp
tests/: cli_tests.cmake  test_avalanche.cpp  test_kdf.cpp  test_kdf_deterministic.cpp  test_permutation.cpp  test_roundtrip.cpp  test_vectors.cpp
tools/: cube96_cli.cpp  gen_kats.cpp
vectors/: cube96_default_kats.csv  cube96_kats.csv  cube96_kats_rowmajor.csv
